--- a/2014/90m paper/differential_cross_section.tex
+++ b/2014/90m paper/differential_cross_section.tex
@@ -241,7 +241,7 @@ Besides the systematic uncertainties mentioned at the above analysis steps, the 
 \subsection{Systematic Cross-Checks}
 \label{sec:cross checks}
 
-Compatible results have obtained from data originating from different bunches and different diagonals and different time periods.
+Compatible results have obtained from data originating from different bunches, different diagonals and different time periods.
 
 %----------------------------------------------------------------------------------------------------
 
@@ -253,7 +253,7 @@ Eventually, the differential cross-section histograms from both diagonals are me
 The systematic uncertainties are summarised in Figure~\ref{fig:syst unc} where their impact on the differential cross-section is shown. The leading uncertainties include normalisation, optics imperfections and beam momentum offset. They are quantified in Table~\ref{tab:data} and can be used to approximate the covariance matrix of systematic uncertainties:
 \begin{equation}
 \label{eq:covar mat}
-\mat V = \sum_{i} \vec v_i \vec v_i^{\rm T}\ ,
+\mat V = \sum_{i=1}^{4} \vec v_i \vec v_i^{\rm T}\ ,
 \end{equation}
 where the $\vec v_i$'s represent the uncertainty vectors (columns) from the table.
 
