--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -48,16 +48,9 @@ The TOTEM experiment has made a high-precision measurement of the elastic
 proton-proton differential cross-section at the centre-of-mass energy 
 $\sqrt s = 8\un{TeV}$ based on a new high-statistics data sample obtained with 
 the $\beta^* = 90\un{m}$ optics. 
-%Furthermore, thanks to an improved analysis procedure, an unprecedented precision has been reached: 
 Both statistical and systematic uncertainties remain below $1\un{\%}$, except 
 the contribution from the overall normalisation which was obtained from 
-another data set. This unprecedented precision allows to exclude a purely exponential cross-section in the range of four-momentum transfer squared $0.027 < |t| < 0.2\un{GeV^2}$ with a significance greater than $7\un{\sigma}$. Consequently, the extrapolation to $t=0$ is reviewed and two extended models are presented, yielding total cross-section estimates $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, well compatible with previous TOTEM measurements.
-%
-%Analysis of a new dataset obtained at $\sqrt{s} = 8\un{TeV}$ and $\beta^* = 90\un{m}$ optics.
-%High statistics (more than $7\cdot10^{6}$ elastic events)
-%$\Rightarrow$ strongly reduced statistical and systematic uncertainties (each below $1\un{\%}$) % excluding normalisation unc.
-%$\Rightarrow$ purely exponential behaviour of differential cross-section excluded at more than $7\un{\sigma}$ significance
-%$\Rightarrow$ new determination of the total cross-section (non-exponential extrapolation), values, but still compatible with the previous TOTEM measurements.
+another data set. This unprecedented precision allows to exclude a purely exponential differential cross-section in the range of four-momentum transfer squared $0.027 < |t| < 0.2\un{GeV^2}$ with a significance greater than $7\un{\sigma}$. Consequently, the extrapolation to $t=0$ is reviewed, and two extended parameterisations are presented, yielding total cross-section estimates $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, well compatible with previous TOTEM measurements.
 \end{abstract}
 
 \begin{keyword}
