--- a/2013/1km paper/introduction.tex
+++ b/2013/1km paper/introduction.tex
@@ -2,9 +2,6 @@
 %
 Elastic scattering of protons is a process mediated by the strong and the electromagnetic interactions -- the weak interaction can be neglected since its carriers are heavy compared to the small momentum transfers, $|t|$, typical for elastic scattering. In this context, the strong interaction is traditionally called nuclear and the electromagnetic called Coulomb. In quantum-theory description, each of the interactions is described by a complex scattering amplitude, nuclear ${\cal A}^{\rm N}$ and Coulomb ${\cal A}^{\rm C}$. Moreover, the superposition 
 of the two amplitudes generates an interference term in the combined interaction cross-section. 
-
-The Coulomb amplitude can be calculated from QED (e.g.~Section 3.2 in \cite{block06}), using empirical electric and magnetic form factors of the proton (e.g.~\cite{puckett10}). It can be shown (e.g.~Section 1.3.1 in~\cite{jan_thesis}) that, at low $|t|$, the effect of both form factors can be described by a single function ${\cal F}$. 
-
 Since the Coulomb amplitude is known, the Coulomb-nuclear interference (CNI) exposes the phase of the nuclear amplitude, which is necessary for a complete understanding of the interaction but not directly observable in the pure hadronic differential cross-section. The interference effect is most pronounced in the $t$-region where the two amplitudes have similar magnitudes, i.e. -- for typical LHC centre-of-mass energies of a few TeV -- near $t \sim 5 \times 10^{-4}\,\rm GeV^{2}$. Thus the experimental sensitivity to 
 the nuclear phase, which for general nuclear amplitudes is a function of $t$, 
 is limited to a region at very small $|t|$, making any conclusions on the 
@@ -35,8 +32,8 @@ Therefore the more general and complex Kundr\'{a}t-Lokaj\'{\i}\v{c}ek (KL) inter
 formula~\cite{kl94} is applied in the present study, which offers much more freedom for the
 choice of the theoretically unknown functional forms of the hadronic modulus 
 and phase. Since the data cannot unambiguously determine all functional forms and their parameters, the results of this study, still representatively 
-expressed in terms of $\rho$, become conditional to the choice of amplitude models. Each of these choices implies a different behaviour of the interaction 
-in impact parameter space.
+expressed in terms of $\rho$, become conditional to the choice of amplitude models. Each of these choices implies a different behaviour of the interaction in impact parameter space, as discussed in Section~...
+\textbf{[not yet written!!!]}.
 
 In order to optimally exploit the information of all available data, the two 
 data sets are analysed in a combined way, providing complementary constraints:
