--- a/2013/1km paper/data_taking.tex
+++ b/2013/1km paper/data_taking.tex
@@ -5,7 +5,7 @@ The results reported here are based on data taken in October 2012
 in a dedicated LHC proton fill (3216)
 with very special beam properties. The beam optics with $\beta^{*} = 1000\,$m
 has been specifically developed for measuring low-$|t|$ elastic scattering.
-Like the previously used $\beta^{*} = 90\,$m optics~\cite{epl96,epl101-tot,prl111},
+Like the previously used $\beta^{*} = 90\,$m optics~\cite{epl96,epl101-el,epl101-tot,prl111},
 this new optics configuration
 provides parallel-to-point focussing in the vertical plane at the RP position 
 $s = 220\un{m}$, implemented by tuning the transport matrix elements via the
