--- a/2013/1km paper/differential_cross_section.tex
+++ b/2013/1km paper/differential_cross_section.tex
@@ -1,6 +1,6 @@
 \section{Differential Cross-Section}
 
-The analysis method is very similar to the previously published ones \cite{prl111,epl101-el}. Each diagonal is analysed separately, some steps are performed independently for each bunch. In this analysis, however, a different normalisation approach is used, consequently making all $t$-independent scaling factors (e.g.~certain inefficiency corrections) irrelevant.
+The analysis method is very similar to the previously published ones \cite{epl101-el,prl111}. Each diagonal is analysed separately, some steps are performed independently for each bunch. In this analysis, however, a different normalisation approach is used, consequently making all $t$-independent scaling factors (e.g.~certain inefficiency corrections) irrelevant.
 
 %----------------------------------------------------------------------------------------------------
 \subsection{Event Reconstruction}
