--- a/2013/1km paper/elastic_1km_npb.tex
+++ b/2013/1km paper/elastic_1km_npb.tex
@@ -135,20 +135,6 @@ NKTH-OTKA grant 74458 (Hungary).
 %--------------------------------------------------
 \begin{thebibliography}{99}
 
-\bibitem{block06}
-	\Name{BLOCK, M. M.}
-	%Hadronic forward scattering: Predictions for the Large Hadron Collider and cosmic rays
-	\REVIEW{Phys. Rept.}{436}{2006}{71--215}
-	%doi       = "10.1016/j.physrep.2006.06.003",
-
-\bibitem{puckett10}
-	\Name{PUCKETT, A. J. R.~\etal{}(GEp-III Collaboration)}
-	Final Results of the GEp-III Experiment and the Status of the Proton Form Factors,
-	arXiv:nucl-ex/1008.0855 (2010)
-
-\bibitem{jan_thesis}
-	\Name{Ka\v spar J.}
-	PhD Thesis, CERN-THESIS-2011-214, {\tt http://cdsweb.cern.ch/record/1441140}
 
 \bibitem{plb43} U. Amaldi et al., Phys. Lett. B 43 (1973) 231-236.
 
@@ -181,10 +167,26 @@ NKTH-OTKA grant 74458 (Hungary).
 
 \bibitem{dremin-dispersion} I.M. Dremin, JETP Lett. 97 (2013) 571-573, arXiv:1304.5345; and references therein.
 
+\bibitem{8tev-90m}
+	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	The $8\un{TeV}$, $\beta^* = 90\un{m}$ paper
+
+\bibitem{kl94}
+	\Name{Kundr\' at, V. and Lokaj\' i\v cek, M.}
+	%title     = "High-energy scattering amplitude of unpolarized and charged hadrons",
+	\REVIEW{Z.~Phys.}{C63}{1994}{619--630}
+	%doi       = "10.1007/BF01557628",
+
+
 \bibitem{totem-jinst}
     %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
 	\Name{Anelli G.~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{JINST}{3}{2008}{S08007}
+
+\bibitem{totem-ijmp}
+	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	\REVIEW{Int.~J.~Mod.~Phys.~A}{28}{2013}{1330046}
+
 
 \bibitem{epl96}
     %First measurements of the total proton-proton cross-section at the LHC energy of $\sqrt s =7\,\rm TeV$ CERN-PH-EP-2011-158
@@ -195,9 +197,9 @@ NKTH-OTKA grant 74458 (Hungary).
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{101}{2013}{21002}
 
-\bibitem{epl101-inel}
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{101}{2013}{21003}
+%\bibitem{epl101-inel}
+%	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+%	\REVIEW{Europhys.~Lett.}{101}{2013}{21003}
 
 \bibitem{epl101-tot}
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
@@ -207,29 +209,32 @@ NKTH-OTKA grant 74458 (Hungary).
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Phys.~Rev.~Lett.}{111}{2013}{012001}
 
-\bibitem{kl94}
-	\Name{Kundr\' at, V. and Lokaj\' i\v cek, M.}
-	%title     = "High-energy scattering amplitude of unpolarized and charged hadrons",
-	\REVIEW{Z.~Phys.}{C63}{1994}{619--630}
-	%doi       = "10.1007/BF01557628",
-
-\bibitem{lafferty94}
- 	% Where to stick your data points: The treatment of measurements within wide bins
-	\Name{Lafferty G.~D.~and Wyatt T.~R.}
-	\REVIEW{Nucl.\ Instrum.\ Meth.}{A 355}{1995}{541}
-
-\bibitem{8tev-90m}
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	The $8\un{TeV}$, $\beta^* = 90\un{m}$ paper
 
 \bibitem{totem-optics}
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	LHC Optics Measurement with Proton Tracks Detected by the Roman Pots of the TOTEM Experiment, 
 	arXiv:1406.0546
 
-\bibitem{totem-ijmp}
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Int.~J.~Mod.~Phys.~A}{28}{2013}{1330046}
+\bibitem{lafferty94}
+ 	% Where to stick your data points: The treatment of measurements within wide bins
+	\Name{Lafferty G.~D.~and Wyatt T.~R.}
+	\REVIEW{Nucl.\ Instrum.\ Meth.}{A 355}{1995}{541}
+
+
+\bibitem{block06}
+	\Name{BLOCK, M. M.}
+	%Hadronic forward scattering: Predictions for the Large Hadron Collider and cosmic rays
+	\REVIEW{Phys. Rept.}{436}{2006}{71--215}
+	%doi       = "10.1016/j.physrep.2006.06.003",
+
+\bibitem{puckett10}
+	\Name{PUCKETT, A. J. R.~\etal{}(GEp-III Collaboration)}
+	Final Results of the GEp-III Experiment and the Status of the Proton Form Factors,
+	arXiv:nucl-ex/1008.0855 (2010)
+
+\bibitem{jan_thesis}
+	\Name{Ka\v spar J.}
+	PhD Thesis, CERN-THESIS-2011-214, {\tt http://cdsweb.cern.ch/record/1441140}
 
 \bibitem{bailly87}
 	%title={An impact parameter analysis of proton-proton elastic and inelastic interactions at 360 GeV/c}
