--- a/2013/1km paper/elastic_1km_npb.tex
+++ b/2013/1km paper/elastic_1km_npb.tex
@@ -1,4 +1,4 @@
-\documentclass[3p,twocolumn]{elsarticle}
+\documentclass[3p,twocolumn,a4paper]{elsarticle}
 
 \usepackage{amsmath}
 \usepackage{amssymb}
