--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -1,17 +1,22 @@
-\section{Coulomb-nuclear interference}
+\section{Coulomb-Nuclear Interference}
 
 %----------------------------------------------------------------------------------------------------
 
-\subsection{Theoretical framework}
+\subsection{Theoretical Framework}
 \label{sec:cni_framework}
+In this section the different components of the combined elastic scattering amplitude, already briefly outlined in the introduction, are discussed in more detail. In particular, the possible choices for theoretically unknown terms are explained.
+
+%------------------------------------------------------------------
+\subsubsection{Coulomb Amplitude}
+%
+The Coulomb amplitude can be calculated from QED (e.g.~Section 3.2 in \cite{block06}), using empirical electric and magnetic form factors of the proton (e.g.~\cite{puckett10}). It can be shown (e.g.~Section 1.3.1 in~\cite{jan_thesis}) that, at low $|t|$, the effect of both form factors can be described by a single function ${\cal F}$. 
 
 
-%----------------------------------------------------------------------------------------------------
-\subsubsection{Nuclear amplitude}
+\subsubsection{Nuclear Amplitude}
+%
+Since the nuclear amplitude can presently not be calculated from first principles, its phenomenological description will be discussed.
 
-Since the nuclear amplitude can not be currently calculated from first principles, its mathematical description shall be discussed.
-
-The {\bf modulus} is closely related to the differential cross-section and thus strongly constrained by experimental observations. Following especially \cite{8tev-90m}, the modulus will be parametrised:
+The {\bf modulus} is closely related to the differential cross-section and thus strongly constrained by experimental observations outside the Coulomb and CNI region. Following especially~\cite{8tev-90m}, the modulus will be parametrised as:
 \begin{equation}
 \label{eq:nuc mod}
 | {\cal A}^{\rm N}(t) | = a \exp\left( \sum\limits_{n}^{N_b} b_n t^n \right)\ ,
@@ -57,10 +62,10 @@ results in a peak with at $t_{\rm m} \approx -0.310\un{GeV^2}$, amplitude $A \ap
 
 \end{itemize}
 
-It should be noted that the phase has decisive influence on the amplitude behaviour in the space of impact parameter, $b$, see e.g.~section 3 in \cite{klk02}. It can be quantified by evaluating the root-mean-squares (RMS) of $b$ for elastic and inelastic collisions. The constant and standard phase lead to elastic collisions more central (smaller RMS) than the inelastic ones. The peripheral phase can yield a description with the opposite hierarchy, which is argued more natural by some authors (e.g.~section 4 in \cite{kl96}).
+It should be noted that the phase has decisive influence on the amplitude behaviour in the space of impact parameter, $b$, see e.g.~section 3 in~\cite{klk02}. It can be quantified by evaluating the root-mean-squares (RMS) of $b$ for elastic and inelastic collisions. The constant and standard phase lead to elastic collisions more central (smaller RMS) than the inelastic ones. The peripheral phase can yield a description with the opposite hierarchy, which is argued more natural by some authors (e.g. Section~4 in~\cite{kl96}).
 
 %----------------------------------------------------------------------------------------------------
-\subsubsection{Coulomb-nuclear interference formulae}
+\subsubsection{Coulomb-Nuclear Interference Formulae}
 
 The {\bf simplified West-Yennie formula (SWY)} \cite{wy68} is derived in the framework of perturbative QFT by evaluating the lowest-order Feynman diagrams that comprise both nuclear and Coulomb interactions. In this approach, the interference is reduced to an additional phase between the Coulomb and nuclear amplitudes. Moreover, several approximations were used in the derivation. First, in order to avoid integrating over off-mass-shell contributions to the nuclear amplitude (purely known), very slow variation of the nuclear amplitude phase was assumed: $\arg {\cal A}^{\rm N} \approx \hbox{const}$. Then, in order to obtain a closed-form expression, the exponential slope of the nuclear modulus
 \begin{equation}
